--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "devextreme": "21.2.5",
+    "devextreme-vue": "21.2.5",
     "leaflet": "^1.7.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
